@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    - remove test dependency on Devel::StringInfo, which requires Moose
+      (RT#96034)
 
 1.33      2014-04-19 05:58:46Z
     - line numbers in shipped code are now almost the same (within 3) as the
